# snesjpt

./: ANDROID-STRUCTURE.md  App.tsx  README.md  build.yml  capacitor.config.ts  constants.ts  index.html  index.tsx  manifest.json  metadata.json  package-lock.json  package.json  types.ts
.github/workflows/: build.yml  main.yml
android/: gradle.properties  gradle.properties.backup
android/app/: build.gradle
android/app/src/main/java/com/retropocket/snes/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/retropocket/snes/: EmulatorActivity.kt  MainActivity.kt
app/src/main/java/com/retropocket/snes/input/: VirtualControllerView.kt
app/src/main/res/layout/: activity_emulator.xml  activity_main.xml
components/: Emulator.tsx  Library.tsx  VirtualController.tsx
utils/: db.ts
