cmake_minimum_required(VERSION 3.22.1)

project("retropocket-core")

add_library(
        retropocket-core
        SHARED
        native-lib.cpp)

find_library(
        log-lib
        log)

target_link_libraries(
        retropocket-core
        ${log-lib}
        android) # Linka com biblioteca de bitmap android